<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="141dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/noun_who_4249588" />

    <TextView
        android:id="@+id/whoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whoAreYou"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/caregiverBtn"
        android:layout_width="203dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/caregiverBtnText"
        app:layout_constraintEnd_toEndOf="@+id/whoTextView"
        app:layout_constraintStart_toStartOf="@+id/whoTextView"
        app:layout_constraintTop_toBottomOf="@+id/whoTextView" />

    <Button
        android:id="@+id/contactPersonBtn"
        android:layout_width="203dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:text="@string/contactPersonBtnText"
        app:layout_constraintEnd_toEndOf="@+id/caregiverBtn"
        app:layout_constraintStart_toStartOf="@+id/caregiverBtn"
        app:layout_constraintTop_toBottomOf="@+id/caregiverBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>